Fix mouse wheel over-scrolls when display is scaled and scroll is paginated

In Windows, when it is set to "One screen at a time" per wheel notch
vertical scrolling, and to over 100% display scaling, the page scrolls
up or down by more than 100% (actually display_scaling * 100%), where
approximately 100% is expected. Basically, the scrolling takes display
scaling into account which it shouldn't. This makes paginated mouse
wheel scrolling unusable when display is scaled to over 100%.

This CL fixes this bug.

BUG=666133

Review-Url: https://codereview.chromium.org/2605193002
Cr-Commit-Position: refs/heads/master@{#451438}

Former-commit-id: 9c53350ce5b4233fedd89b6593451df30539b920